@@ -260,7 +260,8 @@ library PyCOMTestLib
 							   [in, defaultvalue(1)] short sval,
 							   [out, retval] IPyCOMTest **ppout );
 		HRESULT GetStruct([out, retval]TestStruct1 *ret);
-		HRESULT DoubleString([in] BSTR inStr, [out, retval] BSTR *outStr);
+        HRESULT GetOutStruct([ out ] TestStruct1 * ret);
+        HRESULT DoubleString([in] BSTR inStr, [ out, retval ] BSTR * outStr);
 		HRESULT DoubleInOutString([in,out] BSTR *str);
 		[restricted] HRESULT NotScriptable([in,out] int *val);
 
